# FLINK.NET

./: .editorconfig  .gitignore  AGENTS.md  DEVELOPMENT_GUIDELINES.md  Directory.Build.props  INSTRUCTIONS.md  KAFKA_SETUP.md  README.md  Readme.md  SONAR_EXCLUSIONS.md  WINDOWS_SETUP.md  all_warnings.txt  build-all-sln.cmd  build-all-sln.sh  build-all.cmd  build-all.sh  build_output.txt  coverlet.runsettings  current_warnings.txt  docker-compose.kafka.yml  reliability_test_passed_output.txt  run-all-workflows.cmd  run-all-workflows.sh  run-full-development-lifecycle.cmd  run-full-development-lifecycle.ps1  run-full-development-lifecycle.sh  run-full-development-lifecycle.sh.backup  run-sonarcloud-workflow.ps1  stress_test_passed_output.txt  test-flink-improvements.ps1
.copilot/: README.md  Start-MCP-Servers.ps1  ai-context.md  instructions.md  mcp-config.json  quality-rules.md  start-mcp-servers.sh
.github/: CODEOWNERS  dependabot.yml
FlinkDotNet/: FlinkDotNet.sln  build_output.txt  full_build_output.txt
FlinkDotNet.WebUI/: Directory.Build.props  FlinkDotNet.WebUI.sln
FlinkDotNetAspire/: FlinkDotNetAspire.sln  SONAR_EXCLUSIONS.md
IntegrationTestImage/: Dockerfile  IntegrationTestImage.csproj  IntegrationTestImage.sln  Program.cs  entrypoint.sh
NativeKafkaBridge/: Makefile  NativeProducer.cs  nativekafkabridge.cpp  nativekafkabridge.h
docs/: APACHE_FLINK_2_0_FEATURES.md  FLINKDOTNET_2_0_FEATURES.md  FLINK_NET_FEATURES.md  GHCR-Tokens.md  PERFORMANCE_IMPROVEMENTS.md  (+5 more)
native/: CMakeLists.txt  Makefile  libflinkkafka.c  libflinkkafka.h  libflinkkafka_old.c
(+444 files in other folders)
